updated text in cards

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-9.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Arkansas</h5>
+          <p class="card-text">Arkansas Welcome Center with my partner and my dad</p>
         </div>
       </div>
     </div>
@@ -114,8 +114,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-10.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Tootsie Truck</h5>
+          <p class="card-text">How many licks would it take to get to the center of that truck?</p>
         </div>
       </div>
     </div>
@@ -123,8 +123,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-11.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Metropolis</h5>
+          <p class="card-text">Checking out the Superman statue in his hometown in Illinois.</p>
         </div>
       </div>
     </div>
@@ -135,8 +135,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-13.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Pigeon Forge</h5>
+          <p class="card-text">Best little cat house in all of Tennessee</p>
         </div>
       </div>
     </div>
@@ -144,8 +144,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-14.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">The Lost Sea Caves</h5>
+          <p class="card-text">Awesome cavern views in Tennessee</p>
         </div>
       </div>
     </div>
@@ -153,8 +153,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-15.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Smoky Mountains</h5>
+          <p class="card-text">Some green roadside views.</p>
         </div>
       </div>
     </div>
@@ -165,8 +165,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-16.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Blacksburg</h5>
+          <p class="card-text">In Virginia, making our way to NYC</p>
         </div>
       </div>
     </div>
@@ -174,8 +174,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-17.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Somewhere in Pennsylvania</h5>
+          <p class="card-text">One of many old Pepsi Cola buildings along the train route</p>
         </div>
       </div>
     </div>
@@ -183,8 +183,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-18.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Somewhere in Pennsylvania</h5>
+          <p class="card-text">Some sweet 'fiti on our way to NYC</p>
         </div>
       </div>
     </div>
@@ -194,8 +194,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-19.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Stray Cat Jamboree</h5>
+          <p class="card-text">Met some storage facility cats on Long Island</p>
         </div>
       </div>
     </div>
@@ -203,8 +203,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-20.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Tha Big Apple</h5>
+          <p class="card-text">Made it to town during the UN Summit</p>
         </div>
       </div>
     </div>
@@ -212,8 +212,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-21.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Cookie Puss</h5>
+          <p class="card-text">Carvel's famous Cookie Puss ice cream cake for my early birthday celebration!</p>
         </div>
       </div>
     </div>
@@ -223,8 +223,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-22.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Outside Penn Station</h5>
+          <p class="card-text">So many hot dog carts in NYC</p>
         </div>
       </div>
     </div>
@@ -232,8 +232,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-23.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Somewhere in Upstate New York</h5>
+          <p class="card-text">Train view on the way to Chicago</p>
         </div>
       </div>
     </div>
@@ -241,8 +241,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-24.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Somewhere in Ohio</h5>
+          <p class="card-text">Train view on the way to Chicago</p>
         </div>
       </div>
     </div>
@@ -252,8 +252,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-25.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Cloud Gate</h5>
+          <p class="card-text">Checkin' out the bean in Chi-town</p>
         </div>
       </div>
     </div>
@@ -261,8 +261,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-26.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Matcha'more</h5>
+          <p class="card-text">a cute lil coffee shop by our hotel in Chicago</p>
         </div>
       </div>
     </div>
@@ -270,8 +270,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-27.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Chicago</h5>
+          <p class="card-text">River view from one of the bridges in Chicago</p>
         </div>
       </div>
     </div>
@@ -281,8 +281,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-28.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Mall of America</h5>
+          <p class="card-text">Had a detour in Minnesota and hit up the Lego Store in the Mall of America</p>
         </div>
       </div>
     </div>
@@ -290,8 +290,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-29.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Mall of America</h5>
+          <p class="card-text">Basking in the sun in the mall in Minnesota</p>
         </div>
       </div>
     </div>
@@ -299,8 +299,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-30.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Forest Treks</h5>
+          <p class="card-text">Traipsing through the woods to get to the river in Minnesota</p>
         </div>
       </div>
     </div>
@@ -310,8 +310,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-31.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Somewhere in North Dakota</h5>
+          <p class="card-text">Window view on our way back to Portland</p>
         </div>
       </div>
     </div>
@@ -319,8 +319,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-32.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Columbia Gorge</h5>
+          <p class="card-text">Window view on our way back to Portland</p>
         </div>
       </div>
     </div>
@@ -328,8 +328,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/trip-33.jpg" class="card-img-top" alt="Beach front">
         <div class="card-body">
-          <h5 class="card-title">Train Meals</h5>
-          <p class="card-text">This was some of the best carrot cake I'd ever eaten!</p>
+          <h5 class="card-title">Columbia Gorge</h5>
+          <p class="card-text">A lone island on our way back to Portland</p>
         </div>
       </div>
     </div>
